# destatis-genesis-api

./: .gitignore  .pylintrc  README.md  setup.cfg  setup.py
.github/workflows/: code-analysis.yaml  ossar.yaml  pylint.yaml
destatis_genesis_api_wrapper/: __init__.py
destatis_genesis_api_wrapper/enums/: __init__.py
destatis_genesis_api_wrapper/models/: __init__.py
destatis_genesis_api_wrapper/responses/: __init__.py
destatis_genesis_api_wrapper/tools/: __init__.py
docs/: .buildinfo  index.html  objects.inv  searchindex.js
docs/.doctrees/: environment.pickle  genesis_api_wrapper.catalogue.doctree  genesis_api_wrapper.data.doctree  genesis_api_wrapper.doctree  genesis_api_wrapper.enums.doctree  genesis_api_wrapper.exceptions.doctree  genesis_api_wrapper.find.doctree  genesis_api_wrapper.hello_world.doctree  genesis_api_wrapper.metadata.doctree  genesis_api_wrapper.models.doctree  genesis_api_wrapper.profile.doctree  genesis_api_wrapper.responses.doctree  genesis_api_wrapper.responses.internals.doctree  genesis_api_wrapper.tools.doctree  index.doctree  installation.doctree  modules.doctree  usage.doctree
docs/_sources/: genesis_api_wrapper.catalogue.rst.txt  genesis_api_wrapper.data.rst.txt  genesis_api_wrapper.enums.rst.txt  genesis_api_wrapper.exceptions.rst.txt  genesis_api_wrapper.models.rst.txt  index.rst.txt  (+4 more)
documentation_sources/: conf.py  genesis_api_wrapper.find.rst  genesis_api_wrapper.hello_world.rst  genesis_api_wrapper.metadata.rst  genesis_api_wrapper.profile.rst  genesis_api_wrapper.tools.rst  modules.rst  usage.rst
src/: __init__.py
(+40 files in other folders)
