[metadata]
name = genesis_api_wrapper
version = 1.0.0
author = Jan Eike Suchard
author_email = jan-eike.suchard@magenta.de
description = A wrapper for the GENESIS databases used by the Federal Statistical Office of Germany and statistical offices of the individual states of Germany
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-suchard/destatis-genesis-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    Natural Language :: German
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Database

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
